Fixed admin HTTP interaface to view account ID

--- a/lib/web/accounts/views/index.html
+++ b/lib/web/accounts/views/index.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <form action="/accounts" method="post">
+    <form action="/login" method="post">
         <div class="form-group">
             <input type="hidden" name="crumb" value="<%= crumb %>"/>
             <label for="email">Email address</label>
