--- a/lib/web/accounts/views/layouts/application.html
+++ b/lib/web/accounts/views/layouts/application.html
@@ -11,12 +11,14 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <script src="./../../assets/javascripts/jquery.js"></script>    
+    <script src="./../../assets/javascripts/lodash.js"%></script>
     <script src="/assets/javascripts/bootstrap.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>    
     <![endif]-->
 </head>
 
@@ -28,6 +30,7 @@
     <%- content %>
 
     <% include _footer.html %>
+
 </div> <!-- /container -->
 
 </body></html>
