--- a/lib/web/accounts/views/layouts/_header.html
+++ b/lib/web/accounts/views/layouts/_header.html
@@ -3,7 +3,7 @@
         <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="#">Home</a></li>
             <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Contact</a></li>
+            <li role="presentation"><a href="/logout">logout</a></li>
         </ul>
     </nav>
     <h3 class="text-muted">Zuleikha ES</h3>
